<resources>
    <string name="app_name">San Diego ZooSeeker</string>
    <string name="plan_button_text">Plan\n</string>
    <string name="exhibit">Exhibit</string>
    <string name="add">ADD</string>
    <string name="search_exhibit">Search Exhibit</string>
    <string name="route">Exhibit Route</string>
    <string name="voice_search_exhibit">voice_search_exhibit</string>

<!--    <string name="exhibit_node_info_json">sample_node_info.json</string>-->
<!--    <string name="trail_edge_info_json">sample_edge_info.json</string>-->
<!--    <string name="zoo_graph_json">sample_zoo_graph.json</string>-->
    <string name="exhibit_node_info_json">scaled_exhibit_info_loc.json</string>
    <string name="trail_edge_info_json">scaled_trail_info_loc.json</string>
    <string name="zoo_graph_json">scaled_zoo_graph_loc.json</string>

    <string name="settings">settings</string>
</resources>
